--- a/index.html
+++ b/index.html
@@ -688,21 +688,21 @@
                                 <div class="wm-1"></div>
                                 <i class="icon_mobile id-color size40 mb20"></i>
                                 <h6 class="id-color"> Số điện thoại</h6>
-                                <p>0385782088</p>
+                                <p>0385782087</p>
                             </div>
 
                             <div class="col-md-4">
                                 <div class="wm-1"></div>
                                 <i class="icon_house_alt id-color size40 mb20"></i>
                                 <h6 class="id-color">Địa chỉ nhà</h6>
-                                <p>Âp tân phước, Long HƯNG, Mỹ Tú, Sóc trăng</p>
+                                <p>Âp tân phước B, Long HƯNG, Mỹ Tú, Sóc trăng</p>
                             </div>
 
                             <div class="col-md-4">
                                 <div class="wm-1"></div>
                                 <i class="icon_mail_alt id-color size40 mb20"></i>
                                 <h6 class="id-color"> Địa chỉ:Email </h6>
-                                <p>tranvanqui2004@gmail.com</p>
+                                <p>tranvanquiST2004@gmail.com</p>
                             </div>
                         </div>
                     </div>
